# pycomplexity

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  bfs.py  dfs.py  dijkstra.py  examples_test.py  fix_and_run.sh  fix_structure.sh  merge_sort.py  pyproject.toml
bigopy/: __init__.py  cli.py  models.py
bigopy/analyzers/: estimator.py  function_analyzer.py  module_analyzer.py
bigopy/detectors/: builtin_detector.py  graph_detector.py  loop_detector.py  range_analyzer.py  recursion_detector.py
bigopy/reporters/: json_reporter.py  terminal.py
examples/: complexity_showcase.py  demo_algorithms.py  graph_examples.py  sorting_examples.py
pycomplexity/: __init__.py  cli.py  models.py
pycomplexity/analyzers/: estimator.py  function_analyzer.py  module_analyzer.py
pycomplexity/detectors/: builtin_detector.py  graph_detector.py  loop_detector.py  range_analyzer.py  recursion_detector.py
pycomplexity/reporters/: json_reporter.py  terminal.py
tests/fixtures/: algorithms.py
tests/unit/: test_estimator.py
