[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycomplexity"
version = "0.1.0"
description = "Automatic Big-O complexity estimation for Python code via AST analysis"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
pycomplexity = "pycomplexity.cli:main"

[tool.setuptools.packages.find]
where = ["."]
